--- a/staticfiles/main/css/main.css
+++ b/staticfiles/main/css/main.css
@@ -50,11 +50,7 @@ aside .logo{
 main .features h1 {font-size: 50px;}
 main .features p {max-width: 400px; margin: 20px auto}
 
-form {
-    margin-left: 32%;
-    width: 500px;
-    margin-top: 50px;
-}
+
 
 .alert-warning {
     float: left;
@@ -63,4 +59,9 @@ form {
     margin: 20px 34%;
     text-align: left;
 }
+
+body {
+    overflow-x: hidden;
+  }
+  
 
